# DL_Course

./: .gitignore  README.md  pyproject.toml
..bfg-report/2025-01-25/20-36-25/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
data/kaggle_dataset_text/: submission.csv
logs/alexnet_custom/version_0/: metrics.csv
logs/alexnet_custom/version_1/: metrics.csv
logs/alexnet_custom/version_2/: metrics.csv
logs/alexnet_custom/version_3/: metrics.csv
logs/lightning_logs/cifar100/alexnet_custom_v0.1/: events.out.tfevents.1737399224.MacBook-Pro-Anastasia.local.57483.2  events.out.tfevents.1737401531.MacBook-Pro-Anastasia.local.57483.3  events.out.tfevents.1737408647.MacBook-Pro-Anastasia.local.66083.0  events.out.tfevents.1737408714.MacBook-Pro-Anastasia.local.66232.0  events.out.tfevents.1737408749.MacBook-Pro-Anastasia.local.66296.0  events.out.tfevents.1737410407.MacBook-Pro-Anastasia.local.66296.1  events.out.tfevents.1737410499.MacBook-Pro-Anastasia.local.66296.2
logs/logs_extra_2/lightning_logs/version_0/: events.out.tfevents.1737213437.MacBook-Pro-Anastasia.local.17497.2  events.out.tfevents.1737213532.MacBook-Pro-Anastasia.local.17497.3
logs/logs_extra_2/lightning_logs/version_0/checkpoints/: epoch=9-step=8600.ckpt
logs/logs_extra_2/lightning_logs/version_1/: events.out.tfevents.1737217322.MacBook-Pro-Anastasia.local.17497.4  events.out.tfevents.1737217409.MacBook-Pro-Anastasia.local.17497.5
logs/logs_extra_2/lightning_logs/version_2/: events.out.tfevents.1737218132.MacBook-Pro-Anastasia.local.31572.0
notebooks/: best_model.pth  extra_one.ipynb  extra_three.ipynb  extra_two.ipynb  hw_1.ipynb  hw_1_update.ipynb  hw_2.ipynb  itmo_dl_course__nlp_basics.ipynb  kaggle_text.ipynb
output/: submission_bad.csv  submission_best.csv  submission_not_good.csv
(+19 files in other folders)
