[tool.poetry]
name = "dl-course"
version = "0.1.0"
description = ""
authors = ["Anastasia K. <nkaliman00@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
torch = "^2.5.1"
matplotlib = "^3.10.0"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
tqdm = "^4.67.1"
seaborn = "^0.13.2"
ipywidgets = "^8.1.5"
pytorch-lightning = "^2.5.0.post0"
torchmetrics = "^1.6.1"
tensorboard = "^2.18.0"
tensorboardx = "^2.6.2.2"
scikit-image = "^0.25.0"
transforms = "^0.2.1"
wandb = "^0.19.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
